# WaveConductor

./: .gitattributes  .gitignore  ADL.md  AGENTS.md  Cargo.toml  Hellochar.bat  Hellochar.ps1  README.md  clippy.toml  deny.toml  eslint.config.mjs  eslint.json  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  todo.md  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
crates/waveconductor/: Cargo.toml  build.rs
crates/waveconductor/examples/: leap_smoke.rs
crates/waveconductor/src/: console.rs  hand_providers.rs  logging.rs  main.rs
crates/waveconductor/tests/: sketch_lifecycle_guard.rs
crates/wc-core/: Cargo.toml  build.rs
crates/wc-core-macros/: Cargo.toml
crates/wc-core-macros/src/: lib.rs
crates/wc-core-macros/tests/: derive.rs
crates/wc-core/examples/: leap_duty_stress.rs  leap_heartbeat_monitor.rs  leap_pause_probe.rs  leap_recovery_probe.rs
crates/wc-core/src/: diagnostics.rs  lib.rs
crates/wc-core/src/audio/: background.rs  command.rs  cymatics_synth.rs  device.rs  dots_synth.rs  dsp.rs  dsp_tests.rs  engine.rs  flame_synth.rs  line_synth.rs  mod.rs  nav.rs  ring.rs  sample_bank.rs  settings.rs  state.rs  supervisor.rs
crates/wc-core/src/audio/input/: analysis.rs  analysis_tests.rs  capture.rs  devices.rs  file_drive.rs  mod.rs
crates/wc-core/src/capture/: config.rs  mod.rs  system.rs
crates/wc-core/src/debug/: mod.rs
crates/wc-core/src/frame_limiter/: mod.rs
crates/wc-core/src/input/: activation.rs  button.rs  camera_preview.rs  engagement.rs  entity.rs  gesture.rs  hand.rs  idle_pause.rs  mod.rs  pointer.rs  projection.rs  provider.rs  selection.rs  state.rs  synthetic.rs  systems.rs  wedge.rs
crates/wc-core/src/input/body/: detector.rs  edges.rs  envelope.rs  mask.rs  mod.rs  pipeline.rs  roi.rs  selection.rs  smoothing.rs  systems.rs  transport.rs  worker.rs
crates/wc-core/src/input/capture/: avfoundation.rs  mod.rs  nokhwa.rs
crates/wc-core/src/input/obsbot/: framing.rs  mod.rs  section.rs
crates/wc-core/src/input/onnx/: mod.rs  ort.rs
crates/wc-core/src/input/providers/: leap_native.rs  mock.rs  mod.rs  websocket.rs
crates/wc-core/src/lifecycle/: action_map.rs  actions.rs  display.rs  idle.rs  mod.rs  nav.rs  reload.rs  screensaver.rs  state.rs  window_resize.rs
crates/wc-core/src/lifecycle/screensaver/: fade.rs  mod.rs  overlay.rs  run_condition.rs  settings.rs
crates/wc-core/src/lifecycle/thermal/: mod.rs  sensor.rs  wmi_zone.rs
crates/wc-core/src/platform/: assets.rs  mod.rs
crates/wc-core/src/render/: mod.rs
crates/wc-core/src/settings/: autosave.rs  commands.rs  custom_section.rs  def.rs  event.rs  hand_tracking.rs  input_capture.rs  mod.rs  panel_dev.rs  panel_user.rs  persistence.rs  pointer_capture.rs  registry.rs  runtime_enum.rs  test_settings.rs  trait_def.rs
crates/wc-core/src/settings/panel_user/: display.rs  dock.rs  fields.rs  mod.rs  provider_status.rs  template_picker.rs  widgets.rs
crates/wc-core/src/sketch/: cleanup.rs  lifecycle.rs  manifest.rs  mod.rs  scheduling.rs
crates/wc-core/src/soak/: config.rs  mod.rs  system.rs
crates/wc-core/src/templates/: manifest.rs  mod.rs  resource.rs  store.rs  view.rs
crates/wc-core/src/ui/: auto_fade.rs  buttons.rs  credits.rs  frame.rs  mod.rs  picker.rs  reload_overlay.rs  style.rs  text.rs  tutorial.rs
crates/wc-core/src/ui/blur/: callback.rs  mod.rs  node.rs  slots.rs
crates/wc-core/tests/: audio.rs  input.rs  input_registry.rs  lifecycle.rs  lifecycle_idle_veto.rs  mediapipe_registry.rs  screensaver.rs  settings_persistence.rs  settings_plugin.rs  sketch_scaffolding.rs  template_delete_clear.rs  ui_blur.rs  ui_picker.rs
crates/wc-core/tests/common/: app.rs  input.rs  lifecycle.rs  mod.rs
crates/wc-sketches/: Cargo.toml
crates/wc-sketches/src/: lib.rs
crates/wc-sketches/src/cymatics/: PARITY.md  mod.rs  render.rs  screensaver.rs  settings.rs
crates/wc-sketches/src/cymatics/compute/: mod.rs  pipeline.rs  sim_params.rs
crates/wc-sketches/src/cymatics/systems/: audio_coupling.rs  hand.rs  interaction.rs  mod.rs
crates/wc-sketches/src/dots/: PARITY.md  audio_coupling.rs  bone_composite.rs  bone_wireframe.rs  hand_attractors.rs  hand_mesh.rs  hash.rs  mod.rs  post_process.rs  screensaver.rs  settings.rs
crates/wc-sketches/src/dots/systems/: mod.rs  mouse.rs  post_params.rs  sim_params.rs  spawn.rs
crates/wc-sketches/src/flame/: PARITY.md  audio_coupling.rs  branches.rs  levels.rs  mod.rs  render.rs  screensaver.rs  settings.rs  ui.rs
crates/wc-sketches/src/flame/compute/: mod.rs  (+2 more)
crates/wc-sketches/src/hand_mesh/: bone_composite.rs  bone_wireframe.rs  mod.rs
crates/wc-sketches/src/line/: PARITY.md  attractor_visuals.rs  audio_coupling.rs  bone_composite.rs  bone_wireframe.rs  compute.rs  hand_mesh.rs  hash.rs  heatmap.rs  leap_attractors.rs  material.rs  mod.rs  particle.rs  particle_stats.rs  particle_stats_tests.rs  post_process.rs  settings.rs  sim_cpu.rs  systems.rs  template_adjustments.rs  template_adjustments_panel.rs  template_adjustments_store.rs
crates/wc-sketches/src/particles/: compute.rs  material.rs  mod.rs  particle.rs  sim_cpu.rs
crates/wc-sketches/src/radiance/: distance_field.rs  mod.rs  pulse.rs  render.rs  screensaver.rs  settings.rs  sparkle.rs  synthetic.rs
crates/wc-sketches/tests/: dots_soak.rs  line_heatmap_e2e.rs  line_input.rs  line_lifecycle.rs  line_settings_persist.rs  line_soak.rs  line_soak_leap.rs  line_template_adjustments_persist.rs  particles_foundation.rs  radiance_lifecycle.rs
crates/wc-sketches/tests/common/: mod.rs
tools/handtrack-oracle/: README.md  graph_surgery.py  pyproject.toml  spike_io.py
xtask/: Cargo.toml
xtask/src/: bundle_mac.rs  capture.rs  check_secrets.rs  main.rs  manifest.rs  msi.rs  soak.rs  util.rs  validate_shaders.rs
xtask/src/bundle/: common.rs  linux.rs  mac.rs  mod.rs  windows.rs
xtask/src/capture/: diff.rs  metrics.rs  scenarios.rs
xtask/src/soak/: analysis.rs  logscan.rs  rss.rs  timefmt.rs
xtask/tests/: check_secrets.rs  manifest.rs
(+445 files in other folders)
