[workspace]
resolver = "2"
members = [
    "crates/waveconductor",
    "crates/wc-core",
    "crates/wc-core-macros",
    "crates/wc-sketches",
    "xtask",
]

[workspace.package]
version = "5.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["Madison Rickert <3495636+madisonrickert@users.noreply.github.com>"]
repository = "https://github.com/madisonrickert/WaveConductor"
rust-version = "1.89"

[workspace.dependencies]
# Core engine. Note: bevy_audio is deliberately omitted (spec §5.4 says we use
# cpal+fundsp+rustfft directly, not bevy_audio). DefaultPlugins gracefully
# skips AudioPlugin when the feature is absent.
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_mesh",
    "bevy_asset",
    "png",
    "x11",
    "wayland",
] }
# UI
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
# Input action mapping (added in Plan 2; 0.20 is the Bevy-0.18-compatible release)
leafwing-input-manager = "0.20"
# (bevy_mod_debugdump removed 2026-05-25 — declared but never consumed by any
# crate. If we need schedule inspection during debug, add it temporarily then
# remove again rather than carrying the dep year-round.)
# Small inline vectors (hand-tracking: typically ≤2 active hands)
smallvec = { version = "1", features = ["const_generics", "union"] }
# Errors & logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Audio (Plan 4): cross-platform I/O, DSP graph, FFT, lock-free rings.
cpal = "0.16"
fundsp = { version = "0.21", default-features = false }
rtrb = "0.3"
rustfft = "6"
# Audio decode (Plan 9 Phase B): the background sample ships as Vorbis-in-Ogg.
# We pull only the codecs we actually need so the dependency footprint stays
# narrow; if other sketches need WAV/FLAC/MP3, extend the feature list here.
symphonia = { version = "0.5", default-features = false, features = ["vorbis", "ogg"] }
# Serde stack (used by settings persistence in Plan 2)
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Native config dirs
dirs = "5"
# xtask
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
tempfile = "3"
# proc-macro toolchain (settings derive)
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# GPU struct alignment helpers (used by Line sketch particle/uniform buffers)
bytemuck = { version = "1", features = ["derive"] }
# Image decode (Plan 10 Phase A): Line sketch's heatmap-image spawn template
# decodes a user-supplied PNG. Already a transitive dep via Bevy; declared
# here so the heatmap module can depend on it directly.
image = { version = "0.25", default-features = false, features = ["png"] }
# Random sampling (Plan 10 Phase A): CDF inversion sampler for the heatmap
# spawn. Already a transitive dep; declared here for a direct dependency edge.
rand = "0.9"
# JSON for the wasm localStorage path
serde_json = "1"
# wasm-only web bindings (used by settings persistence on web targets)
web-sys = { version = "0.3", features = ["Window", "Storage"] }
# Workspace-internal crates
wc-core = { version = "5.0.0-dev", path = "crates/wc-core" }
wc-core-macros = { version = "5.0.0-dev", path = "crates/wc-core-macros" }
wc-sketches = { version = "5.0.0-dev", path = "crates/wc-sketches" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
as_conversions = "warn"
# Allowed pedantic lints (too noisy for game/sketch code):
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
# Bevy system functions take `Res<T>` by value — that's the Bevy system-param contract.
needless_pass_by_value = "allow"

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
