[workspace]
resolver = "2"
members = [
    "crates/waveconductor",
    "crates/wc-core",
    "crates/wc-core-macros",
    "crates/wc-sketches",
    "xtask",
]

[workspace.package]
version = "5.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["Madison Rickert <3495636+madisonrickert@users.noreply.github.com>"]
repository = "https://github.com/madisonrickert/WaveConductor"
rust-version = "1.89"

[workspace.dependencies]
# Core engine. Note: bevy_audio is deliberately omitted (spec §5.4 says we use
# cpal+fundsp+rustfft directly, not bevy_audio). DefaultPlugins gracefully
# skips AudioPlugin when the feature is absent.
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    # Bloom + other built-in post-process effects live in the
    # `bevy_post_process` sub-crate as of 0.18; gating it behind its own
    # feature keeps it out of headless builds that don't render. Enabled here
    # because WaveConductor draws an internal-HDR scene that needs bloom to
    # turn the Line gravity post-process accumulator into a perceptual glow.
    "bevy_post_process",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_mesh",
    "bevy_asset",
    "png",
    # AgX (and TonyMcMapface, BlenderFilmic) require a sampled lookup table.
    # The `tonemapping_luts` feature pulls in the LUT KTX2 assets and the
    # `bevy_image/zstd` decoder; without it, those Tonemapping variants are
    # not usable. We pick AgX to get soft highlight rolloff on the HDR
    # output of the Line gravity post-process before SDR clamp.
    "tonemapping_luts",
    # `bevy_pbr` provides the 3D render path the Line sketch's `hand_mesh`
    # module uses for bone visualization: `Camera3d`, `Mesh3d`/`MeshMaterial3d`,
    # and the `Material`/`MaterialPlugin` infrastructure behind the custom
    # `BoneWireframeMaterial` (LineList wireframe bones — Metal-safe, unlike
    # `WireframePlugin`, which needs the unsupported `POLYGON_MODE_LINE`).
    "bevy_pbr",
    "x11",
    "wayland",
] }
# UI
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
egui-phosphor = "0.11"
# Input action mapping (added in Plan 2; 0.20 is the Bevy-0.18-compatible release)
leafwing-input-manager = "0.20"
# (bevy_mod_debugdump removed 2026-05-25 — declared but never consumed by any
# crate. If we need schedule inspection during debug, add it temporarily then
# remove again rather than carrying the dep year-round.)
# Small inline vectors (hand-tracking: typically ≤2 active hands)
smallvec = { version = "1", features = ["const_generics", "union"] }
# Errors & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Audio (Plan 4): cross-platform I/O, DSP graph, FFT, lock-free rings.
cpal = "0.16"
fundsp = { version = "0.21", default-features = false }
rtrb = "0.3"
rustfft = "6"
# Audio decode (Plan 9 Phase B): the background sample ships as Vorbis-in-Ogg.
# We pull only the codecs we actually need so the dependency footprint stays
# narrow; if other sketches need WAV/FLAC/MP3, extend the feature list here.
symphonia = { version = "0.5", default-features = false, features = ["vorbis", "ogg"] }
# Serde stack (used by settings persistence in Plan 2)
serde = { version = "1", features = ["derive"] }
toml = "1"
# Native config dirs
dirs = "6"
# xtask
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
tempfile = "3"
# proc-macro toolchain (settings derive)
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# Bitflag types for hand-tracking device-side / service-side health
# (DeviceHealth, ServiceHealth). Used by `input::state::ProviderStatus`.
bitflags = "2"
# GPU struct alignment helpers (used by Line sketch particle/uniform buffers)
bytemuck = { version = "1", features = ["derive"] }
# Image decode (Plan 10 Phase A): Line sketch's heatmap-image spawn template
# decodes a user-supplied image. Format support must match the extension list
# in `LineSettings::spawn_template`'s `#[setting(extensions = […])]` (Plan 11
# Phase C). The PNG decoder is also a transitive dep via Bevy; JPEG and WebP
# are added explicitly so the file-picker's filter doesn't advertise formats
# the decoder can't read.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Random sampling (Plan 10 Phase A): CDF inversion sampler for the heatmap
# spawn. Already a transitive dep; declared here for a direct dependency edge.
rand = "0.9"
# Native LeapC FFI wrapper for hand tracking. The crate's build.rs reads
# `LEAPSDK_LIB_PATH` to locate libLeapC at link time — see `.cargo/config.toml`
# for the relative path into `vendor/leapc/<platform>/`. Default features
# only (gemini is leaprs's only default and is what we want); the optional
# `glam` feature is intentionally off because we convert Vec3 provider-side.
leaprs = { version = "0.2.2", default-features = false, features = ["gemini"] }
# Native file picker (Plan 11 Phase C): cross-platform Browse… dialog for
# the Line sketch's `spawn_template` setting. Targets macOS NSOpenPanel,
# Windows IFileDialog, GTK on Linux. Web build is out of scope (rfd has a
# wasm backend but it returns a promise; would require a different code
# path).
rfd = "0.17"
# JSON for the wasm localStorage path
serde_json = "1"
# wasm-only web bindings (used by settings persistence on web targets)
web-sys = { version = "0.3", features = ["Window", "Storage"] }
# Workspace-internal crates
wc-core = { version = "5.0.0-dev", path = "crates/wc-core" }
wc-core-macros = { version = "5.0.0-dev", path = "crates/wc-core-macros" }
wc-sketches = { version = "5.0.0-dev", path = "crates/wc-sketches" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
as_conversions = "warn"
# Allowed pedantic lints (too noisy for game/sketch code):
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
# Bevy system functions take `Res<T>` by value — that's the Bevy system-param contract.
needless_pass_by_value = "allow"

[profile.dev]
opt-level = 1
# Line-only DWARF: keeps readable panics/backtraces (file:line) but drops
# variable type info that bloats target/debug to 30+ GiB on the Bevy dep tree.
# Flip back to `true` temporarily if you need lldb breakpoints/inspection.
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
