[workspace]
resolver = "2"
members = [
    "crates/waveconductor",
    "crates/wc-core",
    "crates/wc-core-macros",
    "crates/wc-sketches",
    "xtask",
]

[workspace.package]
version = "5.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["Madison Rickert <3495636+madisonrickert@users.noreply.github.com>"]
repository = "https://github.com/madisonrickert/WaveConductor"
rust-version = "1.96"

[workspace.dependencies]
# Core engine. Note: bevy_audio is deliberately omitted (spec §5.4 says we use
# cpal+fundsp directly, not bevy_audio). DefaultPlugins gracefully
# skips AudioPlugin when the feature is absent.
bevy = { version = "0.19", default-features = false, features = [
    "bevy_state",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    # Bloom + other built-in post-process effects live in the
    # `bevy_post_process` sub-crate as of 0.18; gating it behind its own
    # feature keeps it out of headless builds that don't render. Enabled here
    # because WaveConductor draws an internal-HDR scene that needs bloom to
    # turn the Line gravity post-process accumulator into a perceptual glow.
    "bevy_post_process",
    "bevy_sprite",
    "bevy_sprite_render",
    # `bevy_text` registers `Assets<Font>` and the text2d layout plugin. We draw
    # all UI text through egui, but Bevy 0.19's `bevy_sprite_render` pulls in the
    # `update_text2d_layout` system transitively, and 0.19's strict system-param
    # validation *panics* when `Assets<Font>` is absent (it was tolerated in
    # 0.18). Enabling this feature makes DefaultPlugins add the font-asset plugin
    # so that system validates cleanly. (Discovered via `cargo xtask capture`.)
    "bevy_text",
    "bevy_mesh",
    "bevy_asset",
    "png",
    # AgX (and TonyMcMapface, BlenderFilmic) require a sampled lookup table.
    # The `tonemapping_luts` feature pulls in the LUT KTX2 assets and the
    # `bevy_image/zstd` decoder; without it, those Tonemapping variants are
    # not usable. We pick AgX to get soft highlight rolloff on the HDR
    # output of the Line gravity post-process before SDR clamp.
    "tonemapping_luts",
    # `bevy_pbr` provides the 3D render path the Line sketch's `hand_mesh`
    # module uses for bone visualization: `Camera3d`, `Mesh3d`/`MeshMaterial3d`,
    # and the `Material`/`MaterialPlugin` infrastructure behind the custom
    # `BoneWireframeMaterial` (LineList wireframe bones — Metal-safe, unlike
    # `WireframePlugin`, which needs the unsupported `POLYGON_MODE_LINE`).
    "bevy_pbr",
    # `bevy_log` provides `bevy::log::LogPlugin`, which `waveconductor`'s
    # `main.rs` disables to install its own `tracing-subscriber`. This feature
    # was previously enabled transitively by `bevy_console`'s default-featured
    # `bevy`; declared explicitly here now that `bevy_console` is removed
    # (2026-06-20) so the build no longer relies on a transitive feature leak.
    "bevy_log",
    "x11",
    "wayland",
] }
# UI. `default-features = false` to drop bevy_egui's default `picking` feature:
# it pulls in the `bevy_picking` crate and registers egui<->picking integration
# systems that warn at startup ("`bevy_egui/picking` is enabled, but PickingPlugin
# is not added") because our curated DefaultPlugins set deliberately omits
# `bevy/bevy_picking`. We don't use Bevy's picking backend — egui pointer capture
# is handled directly (see settings/input_capture.rs and the EguiPrimaryContextPass
# UI systems) — so the feature is dead weight. Dropping it silences the warning
# and removes `bevy_picking` from the dependency graph entirely. We re-enable the
# rest of the default set (everything except `picking`). bevy-inspector-egui
# already declares bevy_egui with default-features = false, so this is the sole
# source of the `picking` feature; nothing re-enables it via unification.
bevy_egui = { version = "0.40", default-features = false, features = [
    "manage_clipboard",
    "open_url",
    "default_fonts",
    "render",
    "bevy_ui",
] }
bevy-inspector-egui = "0.37"
egui-phosphor = "0.12"
# (bevy_mod_debugdump removed 2026-05-25 — declared but never consumed by any
# crate. If we need schedule inspection during debug, add it temporarily then
# remove again rather than carrying the dep year-round.)
# Small inline vectors (hand-tracking: typically ≤2 active hands)
smallvec = { version = "1", features = ["const_generics", "union"] }
# Errors & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Kiosk display-sleep inhibitor (macOS IOPMAssertion / Windows
# SetThreadExecutionState / Linux D-Bus): gallery installs idle into attract
# mode with no input for hours, and without an assertion the OS dims and then
# sleeps the display ~1 minute in (observed 2026-06-10 as "screen dimming
# during attract mode"). MIT.
keepawake = "0.6"
# Audio (Plan 4): cross-platform I/O, DSP graph, lock-free rings. (rustfft was
# removed 2026-06-20 — declared but never imported; fundsp covers FFT/DSP. Re-add
# here if a sketch ever needs a standalone FFT planner.)
cpal = "0.16"
# default-features=false drops fundsp's `files` (its own symphonia copy) and
# `fft` (fft-convolver) features we don't use. `std` must be re-enabled
# explicitly: 0.23's `resample` module uses `Vec`/`vec!` without an `alloc`
# import, so it fails to compile under fundsp's `no_std` path (`std = []`, so
# this adds no dependencies).
fundsp = { version = "0.23", default-features = false, features = ["std"] }
rtrb = "0.3"
# Audio decode (Plan 9 Phase B): the background sample ships as Vorbis-in-Ogg.
# We pull only the codecs we actually need so the dependency footprint stays
# narrow; if other sketches need WAV/FLAC/MP3, extend the feature list here.
symphonia = { version = "0.5", default-features = false, features = ["vorbis", "ogg"] }
# Serde stack (used by settings persistence in Plan 2)
serde = { version = "1", features = ["derive"] }
toml = "1"
# Native config dirs
dirs = "6"
# xtask
clap = { version = "4", features = ["derive"] }
# Gitignore-aware directory walker (ripgrep's engine). `check-secrets` uses it
# so the scan honors .gitignore / .git/info/exclude (gitignored caches and
# worktrees can't be committed, so a match there is a false positive). With the
# default `require_git = true`, gitignore rules apply only inside a git repo, so
# temp-dir unit tests still scan every planted file.
ignore = "0.4"
regex = "1"
tempfile = "3"
# proc-macro toolchain (settings derive)
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# Bitflag types for hand-tracking device-side / service-side health
# (DeviceHealth, ServiceHealth). Used by `input::state::ProviderStatus`.
bitflags = "2"
blake3 = "1"
# Thermal sensing for the screensaver's adaptive `ThermalState` signal (Plan 11.8)
# needs NO workspace dependency. The Linux deployment NUC is read by a
# zero-dependency `std::fs` sysfs reader (`wc-core`
# `lifecycle::thermal::platform::native`, behind the default-on `thermal-sensor`
# feature). We deliberately avoided `sysinfo` (pulls ~30 crates for file reads
# we can do directly) and `lm-sensors` (needs the libsensors C lib + bindgen at
# build time). macOS Apple-Silicon uses the optional `macmon` backend when the
# `thermal-sensor-macos` feature is enabled. See the design spec's §10 addendum
# and `crates/wc-core/Cargo.toml`.
# GPU struct alignment helpers (used by Line sketch particle/uniform buffers)
bytemuck = { version = "1", features = ["derive"] }
# Image decode (Plan 10 Phase A): Line sketch's heatmap-image spawn template
# decodes a user-supplied image. Format support must match the extension list
# in `LineSettings::spawn_template`'s `#[setting(extensions = […])]` (Plan 11
# Phase C). The PNG decoder is also a transitive dep via Bevy; JPEG and WebP
# are added explicitly so the file-picker's filter doesn't advertise formats
# the decoder can't read.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Random sampling (Plan 10 Phase A): CDF inversion sampler for the heatmap
# spawn. Already a transitive dep; declared here for a direct dependency edge.
rand = "0.10"
# Native LeapC FFI wrapper for hand tracking. The crate's build.rs reads
# `LEAPSDK_LIB_PATH` to locate libLeapC at link time — see `.cargo/config.toml`
# for the relative path into `vendor/leapc/<platform>/`. Default features
# only (gemini is leaprs's only default and is what we want); the optional
# `glam` feature is intentionally off because we convert Vec3 provider-side.
leaprs = { version = "0.2.2", default-features = false, features = ["gemini"] }
# ONNX Runtime for the in-process MediaPipe webcam hand-tracking provider
# (behind `hand-tracking-mediapipe`). Wraps the C++ ONNX Runtime — `download-binaries`
# ships the prebuilt lib + CoreML EP on macOS (GPU/Neural Engine inference). Measured
# improvement over the previous pure-Rust path: palm.run drops from ~164 ms to well
# under the 33 ms/frame budget at 30 Hz. The two-stage palm→landmark glue (anchors,
# NMS, ROI) is implemented in `wc-core/src/input/providers/mediapipe/`. The prebuilt
# binary is subject to the CDLA-Permissive-2.0 license, allowed in deny.toml.
ort = { version = "=2.0.0-rc.12", features = ["coreml", "download-binaries"] }
# Cross-platform webcam capture for the MediaPipe provider's production
# `FrameSource` (behind `hand-tracking-mediapipe-camera`; AVFoundation / V4L2 /
# MediaFoundation). Kept in a sub-feature so the inference/glue stay buildable
# and CI-testable headless without camera platform libraries.
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }
# Native file picker (Plan 11 Phase C): cross-platform Browse… dialog for
# the Line sketch's `spawn_template` setting. Targets macOS NSOpenPanel,
# Windows IFileDialog, GTK on Linux. Web build is out of scope (rfd has a
# wasm backend but it returns a promise; would require a different code
# path).
rfd = "0.17"
# JSON for the wasm localStorage path
serde_json = "1"
# wasm-only web bindings (used by settings persistence on web targets)
web-sys = { version = "0.3", features = ["Window", "Storage"] }
# Workspace-internal crates
wc-core = { version = "5.0.0-dev", path = "crates/wc-core" }
wc-core-macros = { version = "5.0.0-dev", path = "crates/wc-core-macros" }
wc-sketches = { version = "5.0.0-dev", path = "crates/wc-sketches" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
as_conversions = "warn"
# Allowed pedantic lints (too noisy for game/sketch code):
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
# Bevy system functions take `Res<T>` by value — that's the Bevy system-param contract.
needless_pass_by_value = "allow"

[profile.dev]
opt-level = 1
# Debuginfo is split to keep target/debug small (full DWARF on the Bevy dep tree
# alone bloats it past 30+ GiB):
# - workspace crates keep line-tables-only here — readable panics/backtraces
#   (file:line) into our own code, minus the variable/type DWARF.
# - dependencies drop debuginfo entirely (`debug = false` under `package."*"`
#   below) — we don't step-debug into Bevy, so even their line tables are dead
#   weight across the dep tree.
# Need lldb inspection into a dep? Temporarily raise the `package."*"` override
# (or this line) back to `true` and rebuild.
debug = "line-tables-only"

# `package."*"` matches all dependencies but NOT workspace members (the same
# scoping that lets opt-level differ: deps build at 3 for runtime speed, our
# crates stay at dev's 1 for fast compiles). `debug = false` here is the
# documented Cargo recipe for a smaller target/debug — it overrides the
# line-tables-only above for non-workspace crates only.
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
# GUARD — do NOT set `debug-assertions = true` here (or on any release/soak
# profile). The visual-debugging scaffold (`wc_core::capture`,
# `wc_core::debug`) and all its plugin/system registration are
# `#[cfg(debug_assertions)]`-gated, so they compile out of release ONLY while
# debug-assertions stays false. Flipping it true reintroduces per-frame capture
# work and the WC_DEBUG_* parsing into the long-running soak/release binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
