[package]
name = "waveconductor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor v5 — Rust + Bevy interactive art gallery."
publish = false
build = "build.rs"

[[bin]]
name = "waveconductor"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["hand-tracking-gestures", "hand-tracking-mediapipe"]
# Propagates to wc-core and wc-sketches; always on for the waveconductor binary.
# Declared here so that examples (e.g. leap_smoke) can gate on this feature name
# without triggering `unexpected_cfg` warnings.
hand-tracking-gestures = [
    "dep:leaprs",
    "wc-core/hand-tracking-gestures",
    "wc-sketches/hand-tracking-gestures",
]
# In-process MediaPipe webcam hand-tracking. Pulls the camera sub-feature (the
# real binary needs a real webcam) and the sketch hand-consumers. Additive to
# `hand-tracking-gestures`, and in `default`: the deployment binary ships both
# backends and the runtime "Tracking provider" setting decides which one runs
# — see `src/hand_providers.rs`. The ort/CoreML inference backend is unconditional —
# it is part of `wc-core/hand-tracking-mediapipe`.
hand-tracking-mediapipe = [
    "wc-core/hand-tracking-mediapipe-camera",
    "wc-sketches/hand-tracking-gestures",
]

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
# `thermal-sensor` gives the deployment binary real OS temperature readings. On
# the Linux NUC this reads the hottest hardware component via zero-dependency
# sysfs probing; macOS adds `thermal-sensor-macos` below for Apple Silicon.
wc-core = { workspace = true, features = ["thermal-sensor"] }
wc-sketches = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Display-sleep inhibitor for the kiosk: see the workspace Cargo.toml comment.
keepawake = { workspace = true }
# Optional: pulled in when the `hand-tracking-gestures` feature is active.
# Waveconductor is native-only so no wasm target table needed here.
leaprs = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
wc-core = { workspace = true, features = ["thermal-sensor", "thermal-sensor-macos"] }
