[package]
name = "wc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor shared infrastructure: lifecycle, audio, input, settings, math."
publish = false

[lints]
workspace = true

[features]
default = []
# Enables HandTrackingState consumers (sketch gesture detection) and brings
# in the native LeapC FFI dependency. The waveconductor binary turns this on;
# tests can opt in selectively.
hand-tracking-gestures = ["dep:leaprs"]
# Enables real OS temperature sensing for the screensaver's `ThermalState`
# signal. On Linux this is a ZERO-DEPENDENCY `std::fs` reader of the kernel
# `hwmon`/`thermal_zone` sysfs interface (see `lifecycle::thermal::platform::
# native`) — no crate, no MSRV pin, no build-time native dep, smallest possible
# supply-chain surface for an unattended multi-day appliance. On macOS this
# feature still compiles but currently falls through to the Cool/Schedule
# no-sensor model: the Apple-Silicon `macmon` backend needs a newer rustc than
# the pinned 1.89, so it lives behind the separate, dormant
# `thermal-sensor-macos` feature below and is NOT enabled by `thermal-sensor`.
# The platform layer `cfg`-gates the sysfs reader to Linux (non-macOS/non-wasm).
thermal-sensor = []
# Apple-Silicon SoC temperature sensing via `macmon`. DORMANT placeholder:
# `macmon`'s MSRV exceeds the pinned rustc 1.89, so it is intentionally NOT a
# declared dependency and this feature pulls nothing today. The macOS reader
# (`platform::macos`) is gated behind this feature, so plain `thermal-sensor`
# compiles cleanly on macOS by never touching `macmon`. When the toolchain
# advances: add `macmon` as an optional dep and change this to `["dep:macmon"]`.
thermal-sensor-macos = []

[dependencies]
bevy = { workspace = true }
bitflags = { workspace = true }
cpal = { workspace = true }
fundsp = { workspace = true }
leafwing-input-manager = { workspace = true }
rtrb = { workspace = true }
rustfft = { workspace = true }
smallvec = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wc-core-macros.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
egui-phosphor = { workspace = true }
serde.workspace = true
toml.workspace = true
dirs.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }
leaprs = { workspace = true, optional = true }
# Linux temperature sensing (the `native::SysfsThermalSensor` reader) needs NO
# dependency — it reads the kernel `hwmon`/`thermal_zone` sysfs files with
# `std::fs`. We surveyed `sysinfo` (=0.33.1 builds on 1.89 but pulls ~30 crates +
# a frozen MSRV pin), `libmedium`, and `lm-sensors` (needs the libsensors C lib +
# bindgen at build time — deploy friction on a fresh NUC); for a coarse "hottest
# CPU °C every few seconds" on a known Linux box, zero deps is the most robust.
#
# NOTE: the macOS sensor dep (`macmon`) for `thermal-sensor-macos` is still
# intentionally NOT declared — its MSRV exceeds the pinned 1.89. macOS therefore
# falls through to the Cool/Schedule no-sensor model. Add it when the toolchain
# is bumped (see the `thermal-sensor-macos` feature above).

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
