[package]
name = "wc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor shared infrastructure: lifecycle, audio, input, settings, math."
publish = false

[lints]
workspace = true

[features]
default = []
# Enables HandTrackingState consumers (sketch gesture detection) and brings
# in the native LeapC FFI dependency. The waveconductor binary turns this on;
# tests can opt in selectively.
hand-tracking-gestures = ["dep:leaprs"]
# In-process MediaPipe webcam hand-tracking provider. Additive and independent
# of `hand-tracking-gestures` (which brings in leaprs). Uses ONNX Runtime (`ort`)
# with CoreML acceleration on macOS; `ort` downloads a prebuilt C++ ONNX Runtime
# binary at build time (`download-binaries`) under the CDLA-Permissive-2.0 license
# (already allowed in deny.toml). The base feature is the inference + two-stage
# glue (CI-testable headless against vendored models); the real webcam capture is
# the `-camera` sub-feature below so the base build never needs camera platform
# libraries.
hand-tracking-mediapipe = ["dep:ort", "dep:image"]
# Adds the production webcam `FrameSource` (nokhwa) on top of the base feature.
hand-tracking-mediapipe-camera = ["hand-tracking-mediapipe", "dep:nokhwa"]
# Enables real OS temperature sensing for the screensaver's `ThermalState`
# signal. On Linux this is a ZERO-DEPENDENCY `std::fs` reader of the kernel
# `hwmon`/`thermal_zone` sysfs interface (see `lifecycle::thermal::platform::
# native`) — no crate, no MSRV pin, no build-time native dep, smallest possible
# supply-chain surface for an unattended multi-day appliance. On macOS this
# feature still compiles but currently falls through to the Cool/Schedule
# no-sensor model: the Apple-Silicon `macmon` backend lives behind the separate
# `thermal-sensor-macos` feature below and is NOT enabled by `thermal-sensor`.
# The platform layer `cfg`-gates the sysfs reader to Linux (non-macOS/non-wasm).
thermal-sensor = []
# Apple-Silicon SoC temperature sensing via `macmon`. Plain `thermal-sensor`
# compiles cleanly on macOS by never touching `macmon`; macOS dev builds opt in
# through this separate feature.
thermal-sensor-macos = ["dep:macmon"]

[dependencies]
bevy = { workspace = true }
bitflags = { workspace = true }
cpal = { workspace = true }
fundsp = { workspace = true }
leafwing-input-manager = { workspace = true }
rtrb = { workspace = true }
rustfft = { workspace = true }
smallvec = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wc-core-macros.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
egui-phosphor = { workspace = true }
serde.workspace = true
toml.workspace = true
dirs.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }
leaprs = { workspace = true, optional = true }
# MediaPipe webcam provider deps (optional; gated by `hand-tracking-mediapipe`
# / `-camera`). ort = ONNX Runtime inference (CoreML EP on macOS); image = frame
# decode/resize; nokhwa = webcam capture (camera sub-feature only). ort wraps
# the C++ ONNX Runtime, so it sits under the non-wasm target.
ort = { workspace = true, optional = true }
image = { workspace = true, optional = true }
nokhwa = { workspace = true, optional = true }
# Linux temperature sensing (the `native::SysfsThermalSensor` reader) needs NO
# dependency — it reads the kernel `hwmon`/`thermal_zone` sysfs files with
# `std::fs`. We surveyed `sysinfo` (pulls ~30 crates for file reads we can do
# directly), `libmedium`, and `lm-sensors` (needs the libsensors C lib + bindgen
# at build time — deploy friction on a fresh NUC); for a coarse "hottest CPU °C
# every few seconds" on a known Linux box, zero deps is the most robust.
#

[target.'cfg(target_os = "macos")'.dependencies]
# Apple-Silicon temperature sensing. Pinned because `macmon` wraps private Apple
# IOReport/IOKit APIs; construction/sampling errors are contained by
# `platform::macos::MacmonSensor`.
macmon = { version = "=0.7.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
serde_json.workspace = true

[[example]]
name = "leap_pause_probe"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_duty_stress"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_recovery_probe"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_heartbeat_monitor"
required-features = ["hand-tracking-gestures"]

[dev-dependencies]
tempfile.workspace = true
